--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Water Level Dashboard</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <style>
+      * {
+        font-family: Arial, sans-serif;
+      }
+      .error-notification {
+        display: none;
+        background-color: #ff0000;
+        color: #ffffff;
+        padding: 5px 10px;
+        border-radius: 5px;
+        align-items: center;
+      }
+
+      .error-notification i {
+        margin-right: 5px;
+      }
+    </style>
   </head>
   <body>
     <canvas id="waterChart"></canvas>
 
+    <div id="errorNotification" class="error-notification">
+      <i class="fas fa-exclamation-circle"></i>
+      <p>The device is disconnected</p>
+    </div>
+
     <script>
+      var frequency = 1000;
+      var interval;
       // Function to fetch data from the server
       function fetchData() {
         fetch("http://localhost:8000/test", {
@@ -19,7 +47,8 @@
         })
           .then((response) => response.json())
           .then((data) => {
-
+            frequency = data.frequency;
+            console.log(frequency);
             const currentTime = new Date(data.date);
             var options = {
               year: "numeric",
@@ -33,9 +62,58 @@
               "en-US",
               options
             );
+
+            if (waterLevelData.labels.lastIndexOf(formattedDate) !== -1) {
+              document.getElementById("errorNotification").style.display =
+                "flex"; // Set the display property to "flex" to make the error notification visible
+              return;
+            }
+
+            if (
+              document.getElementById("errorNotification").style.display ==
+              "flex"
+            ) {
+              console.log("Device is connected");
+              document.getElementById("errorNotification").style.display =
+                "none";
+            }
             waterLevelData.datasets[0].data.push(data.waterLevel);
             waterLevelData.labels.push(formattedDate);
-            chart.update();
+          })
+          .then(() => {
+            if (waterLevelData.datasets[0].data.length > 120) {
+              waterLevelData.datasets[0].data.shift();
+              waterLevelData.labels.shift(0);
+            }
+          })
+          .then(() => {
+            chart.destroy();
+            chart = new Chart(ctx, {
+              type: "line",
+              data: {
+                labels: waterLevelData.labels,
+                datasets: [
+                  {
+                    label: "Water Level",
+                    data: waterLevelData.datasets[0].data,
+                    backgroundColor: "rgba(54, 162, 235, 0.2)",
+                    borderColor: "rgba(54, 162, 235, 1)",
+                    borderWidth: 2,
+                    tension: 0.5,
+                  },
+                ],
+              },
+              options: {
+                animation: {
+                  duration: 0,
+                },
+              },
+            });
+          })
+          .then(() => {
+            setTimeout(function () {
+              fetchData();
+            }, 5000);
           })
           .catch((error) => {
             console.error("Error:", error);
@@ -58,7 +136,7 @@
 
       // Create a chart using Chart.js
       const ctx = document.getElementById("waterChart").getContext("2d");
-      const chart = new Chart(ctx, {
+      var chart = new Chart(ctx, {
         type: "line",
         data: {
           labels: waterLevelData.labels,
@@ -68,16 +146,20 @@
               data: waterLevelData.datasets[0].data,
               backgroundColor: "rgba(54, 162, 235, 0.2)",
               borderColor: "rgba(54, 162, 235, 1)",
-              borderWidth: 1,
               borderWidth: 2,
               tension: 0.5,
             },
           ],
+          options: {
+            animation: {
+              duration: 0,
+            },
+          },
         },
       });
 
       // Fetch data every 15 seconds
-      setInterval(fetchData, 1000);
+      fetchData();
     </script>
   </body>
 </html>
